changes to fix layout break

--- a/css/styles.css
+++ b/css/styles.css
@@ -211,6 +211,7 @@ main {
     .project {
         width: 50%;
         float: left;
+        height: 380px;
     }
 
     .skills {
